--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,8 @@ section {
 }
 
 .footer-distributed {
-	background: #666;
+	/* background: #666; */
+	background: #8f2530;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -53,16 +54,6 @@ section {
 	width: 40%;
 }
 
-.footer-distributed h3 {
-	color: #ffffff;
-	font: normal 36px 'Open Sans', cursive;
-	margin: 0;
-}
-
-.footer-distributed h3 span {
-	color: lightseagreen;
-}
-
 .footer-distributed .footer-links {
 	color: #ffffff;
 	margin: 20px 0 12px;
@@ -74,13 +65,6 @@ section {
 	font-weight: 400;
 	text-decoration: none;
 	color: inherit;
-}
-
-.footer-distributed .footer-company-name {
-	color: #222;
-	font-size: 14px;
-	font-weight: normal;
-	margin: 0;
 }
 
 .footer-distributed .footer-center {
@@ -186,6 +170,10 @@ section {
 	.footer-distributed {
 		font: bold 14px sans-serif;
 		padding: 10px;
+	}
+
+	.footer-logo-mobile {
+		justify-content: center;
 	}
 
 	.footer-distributed .footer-left,
